feat: Add comprehensive benchmark reporting and validation tools
  - Add generate-report.ts for detailed benchmark analysis
  - Add validate-results.ts for result verification
  - Enhance run-inference.ts and run-evaluation.ts with better error handling and progress tracking
  - Add BENCHMARK_REPORT.md with comprehensive analysis
  - Add FEATURES.md documenting benchmark framework capabilities
  - Restructure benchmark-results.json with improved data format

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test:all": "for dir in tasks/task-*; do echo \"Testing $dir...\"; cd $dir && bun test 2>/dev/null || true; cd ../..; done",
     "test:solutions": "bun run scripts/test-solutions.ts",
     "validate": "bun run scripts/validate-tasks.ts",
+    "validate-results": "bun run scripts/validate-results.ts",
     "list": "ls -1 tasks/",
     "benchmark": "bun run scripts/benchmark.ts",
     "inference": "bun run scripts/run-inference.ts",
-    "evaluate": "bun run scripts/run-evaluation.ts"
+    "evaluate": "bun run scripts/run-evaluation.ts",
+    "report": "bun run scripts/generate-report.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
