feat: Add comprehensive console output and error feedback improvements
   - Show ALL test failures to AI (not just first 2)
   - Add --show-prompt flag to inspect full prompts sent to AI
   - Add --verbose flag for extra details
   - Add console preview of error feedback
   - Save attempt-N.json files for debugging
   - Add CONSOLE_OUTPUT.md documentation
   - Add BENCHMARK_WORKFLOW.md guide

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "validate": "bun run scripts/validate-tasks.ts",
     "validate-results": "bun run scripts/validate-results.ts",
     "list": "ls -1 tasks/",
-    "benchmark": "bun run scripts/benchmark.ts",
+    "benchmark": "bun run scripts/run-benchmark.ts",
+    "benchmark:verbose": "bun run scripts/run-benchmark.ts --verbose",
+    "benchmark:prompt": "bun run scripts/run-benchmark.ts --show-prompt",
+    "view-prompts": "bun run scripts/view-prompts.ts",
     "inference": "bun run scripts/run-inference.ts",
     "evaluate": "bun run scripts/run-evaluation.ts",
     "report": "bun run scripts/generate-report.ts"
