Add GLM Vertex client, openai dep & logging
Introduce a new glm-vertex-client.ts to support GLM and Google Vertex AI models via OpenRouter, exposing a GLMClient, callModel helper, and model lists. Add openai dependency to package.json. Enhance scripts/run-benchmark.ts to create per-run log files, write logs to disk (log/logSeparator helpers), default temperature handling, use direct fetch calls for OpenRouter, improve backup/restore around test runs, and convert console output to logged output for consistent run artifacts. Update task inference output (task-001-content-length) with refreshed metadata and response details.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ node_modules
 out
 dist
 *.tgz
-
+*.log
+*.md
 # code coverage
 coverage
 *.lcov
@@ -15,6 +16,7 @@ logs
 _.log
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 /*tasks-advanced
+/*tasks
 # dotenv environment variable files
 .env
 .env.development.local
